--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script async="false" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAYccXBYqfjf1o3Z_kBoOirRcTClPpzfxI" async defer></script>
+
 </head>
 
 <body>
